tests/derive/entities.stderr
error: Cannot borrow again a storage already borrowed exclusively, you may want to remove the shared borrow.
 --> $DIR/entities.rs:4:8
  |
4 | fn run(_: Entities, _: EntitiesMut) {}
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Cannot borrow again a storage already borrowed exclusively, you may want to remove the shared borrow.
 --> $DIR/entities.rs:7:8
  |
7 | fn run(_: Entities, _: &mut Entities) {}
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Cannot borrow again a storage already borrowed exclusively, you may want to remove the shared borrow.
  --> $DIR/entities.rs:10:8
   |
10 | fn run(_: &Entities, _: EntitiesMut) {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Cannot borrow again a storage already borrowed exclusively, you may want to remove the shared borrow.
  --> $DIR/entities.rs:13:8
   |
13 | fn run(_: &Entities, _: &mut Entities) {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
